# ontoforge

./: .gitignore  CLAUDE.md  Makefile  README.md  dev.sh  docker-compose.full.yml  docker-compose.yml  mcp-example-header.json  mcp-example.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/src/ontoforge_server/: config.py  main.py  provision.py
backend/src/ontoforge_server/core/: database.py  embedding.py  exceptions.py  schemas.py
backend/src/ontoforge_server/mcp/: constants.py  modeling.py  mount.py  runtime.py
backend/src/ontoforge_server/modeling/: repository.py  router.py  schemas.py  service.py
backend/src/ontoforge_server/runtime/: embedding.py  repository.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_embedding_provider.py  test_semantic_search_service.py  test_text_repr.py
backend/tests/fixtures/: test_ontology.json
backend/tests/integration/: test_semantic_search.py
backend/tests/mcp/: test_middleware.py
backend/tests/modeling/: test_entity_types.py  test_ontologies.py  test_properties.py  test_relation_types.py  test_schema_operations.py
backend/tests/runtime/: conftest.py  test_data_wipe.py  test_entities.py  test_neighbors.py  test_provision.py  test_relations.py  test_schema_introspection.py
docker/: docker-compose.yml
docs/: architecture.md  decisions.md  mcp-architecture.md  prd.md  releasing.md  roadmap.md  runtime-ui-architecture.md  runtime-usage.md  testing-strategy.md  visual-data-editor.md
frontend/: Dockerfile  package-lock.json  package.json
scripts/: IMPORT_NOTES.md  (+2 more)
(+61 files in other folders)
